add calculator code